<resources>
    <string name="app_name">Jolanta Zakrzewska CV</string>
    <string name="about_me">about me</string>
    <string name="interests">interests</string>
    <string name="skills">skills</string>
    <string name="activities">activities</string>
    <string name="links">links</string>
    <string name="test">blabla</string>
    <string name="long_test">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent in pharetra ex. Praesent porta dapibus ornare. Maecenas ligula magna, tincidunt sed ornare at, hendrerit eu dui. Aliquam nisl nisl, pulvinar a lectus ultrices, elementum suscipit dolor. </string>
    <string name="privacy">I hereby give consent for my personal data included in the job offer to be processed for the purposes of recruitment under the Data Protection Act 1997 (Dz. U. no. 133, item 0883).</string>
    <string name="about_me_text">I am a student. Blabla</string>
    <string name="phone">728 756 301</string>
    <string name="mail">jolanta.zakrzewska@orange.pl</string>
    <string name="linkedin">LinkedIn Profile</string>
    <string name="github">GitHub Repo</string>
    <string name="club">Science Club Fanpage</string>
    <string name="notld">Night Of The Living Devs - article</string>
    <string name="checkBox">is certified</string>
    <string name="programming_skills">programming</string>
    <string name="graphics_skills">graphics</string>
    <string name="languages_skills">languages</string>
    <string name="other_skills">other</string>
    <string name="cpp">C++</string>
    <string name="c">C</string>
    <string name="java">Java</string>
    <string name="python">Python</string>
    <string name="gimp">Gimp</string>
    <string name="photoshop">Photoshop</string>
    <string name="pl">PL</string>
    <string name="eng">ENG</string>
    <string name="ger">GER</string>
    <string name="joomla">Joomla!</string>
    <string name="android">Android Dev</string>
    <string name="url_linkedin">https://pl.linkedin.com/in/jolanta-zakrzewska-203025120</string>
    <string name="url_git">https://github.com/odys1528</string>
    <string name="url_club">https://www.facebook.com/put.net/</string>
    <string name="url_notld">http://www.codziennypoznan.pl/artykul/2015-12-15/sukces-studentow-politechniki-poznanskiej-na-imprezie-microsoft</string>
    <string name="name_0">PUT.NET Science Club</string>
    <string name="name_1">IT Academic Day 2015</string>
    <string name="name_2">Night Of The Living Devs 2015</string>
    <string name="name_3">GirlzCamp 2015</string>
    <string name="name_4">Code Academy: Python</string>
    <string name="name_5">Java and Android Online Course</string>
    <string name="name_6">Technical Support at the PUT</string>
    <string name="name_7">Boot Camp for Women in ICT</string>
    <string name="name_8">IT Academic Day 2016</string>
    <string name="date_0">10.2015 - now</string>
    <string name="date_1">28.10.2015</string>
    <string name="date_2">11-12.12.2015</string>
    <string name="date_3">5.03.2016</string>
    <string name="date_4">06.2016</string>
    <string name="date_5">07-08.2016</string>
    <string name="date_6">07-08.2016</string>
    <string name="date_7">26-30.09.2016</string>
    <string name="date_8">19.10.2016</string>
    <string name="short_description_0">membership in the club, event organising, participation in competitions</string>
    <string name="short_description_1">organisation, graphic design</string>
    <string name="short_description_2">hackaton in Microsoft (Warsaw)</string>
    <string name="short_description_3">Construct 2 course</string>
    <string name="short_description_4">programming course</string>
    <string name="short_description_5">online programming courses</string>
    <string name="short_description_6">creating registration system for volunteers ("Noc Naukowców")</string>
    <string name="short_description_7">Intel camp for best ICT students</string>
    <string name="short_description_8">organisation, social media</string>
    <string name="full_description_0">blabla</string>
    <string name="full_description_1">blabla</string>
    <string name="full_description_2">blabla</string>
    <string name="full_description_3">blabla</string>
    <string name="full_description_4">blabla</string>
    <string name="full_description_5">blabla</string>
    <string name="full_description_6">blabla</string>
    <string name="full_description_7">blabla</string>
    <string name="full_description_8">blabla</string>

</resources>
