<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#FFFFFF" >

    <TextView
        android:text="@string/github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linkedin_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:id="@+id/git_text"
        android:fontFamily="casual"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/club"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:id="@+id/club_text"
        android:layout_below="@+id/git_text"
        android:layout_centerHorizontal="true"
        android:fontFamily="casual"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/notld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/club_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:id="@+id/notld_text"
        android:fontFamily="casual"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/linkedin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:id="@+id/linkedin_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="casual"
        android:textColor="@android:color/black" />

</RelativeLayout>